Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-8158

InnoDB: Failing assertion: new_state->key_version != ENCRYPTION_KEY_VERSION_INVALID on dynamic change of encryption variables

    XMLWordPrintable

Details

    Description

      --source include/have_xtradb.inc
       
      set global innodb_encrypt_tables = on;
      set global innodb_encryption_threads = 1;
      set global innodb_background_scrub_data_check_interval = 1;
       
      select sleep(3);

      Stack trace from 10.1 commit be2038e3

      2015-05-13 18:22:13 7f542dfff700  InnoDB: Assertion failure in thread 139999525730048 in file fil0crypt.cc line 1014
      InnoDB: Failing assertion: new_state->key_version != ENCRYPTION_KEY_VERSION_INVALID
      InnoDB: We intentionally generate a memory trap.
       
      #5  0x00007f5443a703e0 in *__GI_abort () at abort.c:92
      #6  0x00007f54469ed958 in fil_crypt_get_key_state (new_state=0x7f542dffedb0) at 10.1/storage/xtradb/fil/fil0crypt.cc:1014
      #7  0x00007f54469ee200 in fil_crypt_space_needs_rotation (space=0, key_state=0x7f542dffedb0, recheck=0x7f542dffed9b) at 10.1/storage/xtradb/fil/fil0crypt.cc:1307
      #8  0x00007f54469ee847 in fil_crypt_find_space_to_rotate (key_state=0x7f542dffedb0, state=0x7f542dffedc0, recheck=0x7f542dffed9b) at 10.1/storage/xtradb/fil/fil0crypt.cc:1583
      #9  0x00007f54469efd5e in fil_crypt_thread (arg=0x0) at 10.1/storage/xtradb/fil/fil0crypt.cc:2220
      #10 0x00007f5445a81b50 in start_thread (arg=<optimized out>) at pthread_create.c:304
      #11 0x00007f5443b1695d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1h
                  1h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.